fix hr spacing

--- a/simulator/src/App.css
+++ b/simulator/src/App.css
@@ -13,6 +13,6 @@
 }
 
 .App hr {
-  margin: 0.3em;
+  margin: 1em 0.3em 1em 0.3em;
   width: 30%;
 }
